# beamline-compression

./: .gitignore  README.md  pyproject.toml
docs/: action-plan.md  compression-candidate-matrix.md  dataset-log.csv  dataset-sources.md
src/beamcomp/: __init__.py  benchmark.py
tests/: test_benchmark.py
