[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beamline-compression"
version = "0.1.0"
description = "Compression benchmarking for beamline detector datasets."
requires-python = ">=3.11"

[project.scripts]
beamcomp-benchmark = "beamcomp.benchmark:main"

[tool.setuptools.package-dir]
"" = "src"
